force-app/main/default/objects/Opportunity/fields/Agencia_de_envio__c.field-meta.xml
<CustomField>
    <fullName>Agencia_de_envio__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agencia de envio</label>
    <referenceTo>Agencia_de_envio__c</referenceTo>
    <relationshipLabel>Oportunidades</relationshipLabel>
    <relationshipName>Oportunidades</relationshipName>
    <type>Lookup</type>
</CustomField>