force-app/main/default/objects/Opportunity/fields/Bultos__c.field-meta.xml
<CustomField>
    <fullName>Bultos__c</fullName>
    <label>Bultos</label>
    <summarizedField>OpportunityLineItem.Bultos__c</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>