force-app/main/default/objects/Opportunity/fields/Campos_cumplimentados__c.field-meta.xml
<CustomField>
    <fullName>Campos_cumplimentados__c</fullName>
    <formula>Account.Campos_cumplimentados__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Campos cumplimentados</label>
    <type>Checkbox</type>
</CustomField>