force-app/main/default/objects/Opportunity/fields/Codigo_postal__c.field-meta.xml
<CustomField>
    <fullName>Codigo_postal__c</fullName>
    <formula>Account.BillingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Código postal</label>
    <type>Text</type>
</CustomField>