force-app/main/default/objects/Opportunity/fields/Email_Responsable_Financiero__c.field-meta.xml
<CustomField>
    <fullName>Email_Responsable_Financiero__c</fullName>
    <formula>Account.Email_Responsable_Financiero__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email Responsable Financiero</label>
    <type>Text</type>
</CustomField>