force-app/main/default/objects/Opportunity/fields/ERUM_Activo_ERP__c.field-meta.xml
<CustomField>
    <fullName>ERUM_Activo_ERP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Activo ERP</label>
    <type>Checkbox</type>
</CustomField>