force-app/main/default/objects/Opportunity/fields/ERUM_Agencia_de_envio__c.field-meta.xml
<CustomField>
    <fullName>ERUM_Agencia_de_envio__c</fullName>
    <label>Agencia de envio</label>
    <length>30</length>
    <type>Text</type>
</CustomField>