force-app/main/default/objects/Opportunity/fields/ERUM_Base_IVA__c.field-meta.xml
<CustomField>
    <fullName>ERUM_Base_IVA__c</fullName>
    <label>Base IVA</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>