force-app/main/default/objects/Opportunity/fields/ERUM_Calle__c.field-meta.xml
<CustomField>
    <fullName>ERUM_Calle__c</fullName>
    <formula>ERUM_Nombre_Direccion__r.ERUM_Calle__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Calle</label>
    <type>Text</type>
</CustomField>