force-app/main/default/objects/Opportunity/fields/ERUM_Ciudad__c.field-meta.xml
<CustomField>
    <fullName>ERUM_Ciudad__c</fullName>
    <formula>ERUM_Nombre_Direccion__r.ERUM_Ciudad__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ciudad</label>
    <type>Text</type>
</CustomField>