force-app/main/default/objects/Opportunity/fields/ERUM_Cliente_potencial_venta__c.field-meta.xml
<CustomField>
    <fullName>ERUM_Cliente_potencial_venta__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Cliente potencial venta</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Cliente Potencial</value>
        </filterItems>
        <filterItems>
            <field>Account.Name</field>
            <operation>contains</operation>
            <valueField>Account.Name</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Oportunidades</relationshipLabel>
    <relationshipName>Oportunidades</relationshipName>
    <type>Lookup</type>
</CustomField>