force-app/main/default/objects/Opportunity/fields/ERUM_Codigo_postal__c.field-meta.xml
<CustomField>
    <fullName>ERUM_Codigo_postal__c</fullName>
    <formula>ERUM_Nombre_Direccion__r.ERUM_Codigo_postal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Código postal</label>
    <type>Text</type>
</CustomField>