force-app/main/default/objects/Opportunity/fields/ERUM_Descuento_P_P__c.field-meta.xml
<CustomField>
    <fullName>ERUM_Descuento_P_P__c</fullName>
    <label>%Descuento P.P</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>