force-app/main/default/objects/Opportunity/fields/ERUM_Divisa__c.field-meta.xml
<CustomField>
    <fullName>ERUM_Divisa__c</fullName>
    <formula>TEXT(Account.CurrencyIsoCode)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Divisa</label>
    <type>Text</type>
</CustomField>