force-app/main/default/objects/Opportunity/fields/ERUM_Enviado_ERP__c.field-meta.xml
<CustomField>
    <fullName>ERUM_Enviado_ERP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enviado ERP</label>
    <type>Checkbox</type>
</CustomField>