force-app/main/default/objects/Opportunity/fields/ERUM_Fecha_pedido__c.field-meta.xml
<CustomField>
    <fullName>ERUM_Fecha_pedido__c</fullName>
    <label>Fecha pedido</label>
    <type>Date</type>
</CustomField>