force-app/main/default/objects/Opportunity/fields/ERUM_Fecha_presupuesto__c.field-meta.xml
<CustomField>
    <fullName>ERUM_Fecha_presupuesto__c</fullName>
    <label>Fecha presupuesto</label>
    <type>Date</type>
</CustomField>