force-app/main/default/objects/Opportunity/fields/ERUM_Idioma__c.field-meta.xml
<CustomField>
    <fullName>ERUM_Idioma__c</fullName>
    <formula>TEXT(Account.ERUM_Idioma__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Idioma</label>
    <type>Text</type>
</CustomField>