force-app/main/default/objects/Opportunity/fields/ERUM_Importe_Dcto_Factura__c.field-meta.xml
<CustomField>
    <fullName>ERUM_Importe_Dcto_Factura__c</fullName>
    <label>Importe Dcto Factura</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>