force-app/main/default/objects/Opportunity/fields/ERUM_Impuesto_Pack__c.field-meta.xml
<CustomField>
    <fullName>ERUM_Impuesto_Pack__c</fullName>
    <label>%I.Pack</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>