force-app/main/default/objects/Opportunity/fields/ERUM_Incoterms__c.field-meta.xml
<CustomField>
    <fullName>ERUM_Incoterms__c</fullName>
    <label>Condiciones de envío</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EXW</fullName>
                <default>true</default>
                <label>EXW - A la salida</label>
            </value>
            <value>
                <fullName>FCA</fullName>
                <label>FCA - Libre transportista</label>
            </value>
            <value>
                <fullName>CPT</fullName>
                <label>Transporte pagado hasta</label>
            </value>
            <value>
                <fullName>CIP</fullName>
                <label>Transporte y Seguro Pagado Hasta</label>
            </value>
            <value>
                <fullName>DAP</fullName>
                <label>DAP-Entrega derech no pagados</label>
            </value>
            <value>
                <fullName>DPU</fullName>
                <label>Entrega en el lugar descargado</label>
            </value>
            <value>
                <fullName>DDP</fullName>
                <label>Entrega derechos pagados</label>
            </value>
            <value>
                <fullName>FAS</fullName>
                <label>FAS -Puerto de carga convenido</label>
            </value>
            <value>
                <fullName>FOB</fullName>
                <label>FOB - Franco a bordo</label>
            </value>
            <value>
                <fullName>CFR</fullName>
                <label>Coste y Flete</label>
            </value>
            <value>
                <fullName>CIF</fullName>
                <label>Coste, Seguro y Flete</label>
            </value>
            <value>
                <fullName>COD</fullName>
                <label>Pago a la entrega</label>
            </value>
            <value>
                <fullName>DAF</fullName>
                <label>Entregado en frontera</label>
            </value>
            <value>
                <fullName>DDP-IVA</fullName>
                <label>DDP menos IVA</label>
            </value>
            <value>
                <fullName>DDU</fullName>
                <label>DDU-Entrega derch no pagados</label>
            </value>
            <value>
                <fullName>DEQ</fullName>
                <label>DEQ-Entrega sobre muelle, Dech</label>
            </value>
            <value>
                <fullName>DES</fullName>
                <label>DES-Entrega sobre buque</label>
            </value>
            <value>
                <fullName>EXT</fullName>
                <label>EXT - Exteriores</label>
            </value>
            <value>
                <fullName>FCA H&amp;M</fullName>
                <label>FCA ALCOY (SPAIN) INCOTERMS 2020</label>
            </value>
            <value>
                <fullName>FOB-IST</fullName>
                <label>FOB Istambul</label>
            </value>
            <value>
                <fullName>NMD</fullName>
                <label>NMD - N/M Debidos</label>
            </value>
            <value>
                <fullName>NMF</fullName>
                <label>NMF - N/M en factura</label>
            </value>
            <value>
                <fullName>NMPC</fullName>
                <label>NMPc -N/M Pagados Corto</label>
            </value>
            <value>
                <fullName>NMPL</fullName>
                <label>NMPI -N/M Pagados Largo</label>
            </value>
            <value>
                <fullName>NMPM</fullName>
                <label>NMPm - N/M Pagados Medio</label>
            </value>
            <value>
                <fullName>SMD</fullName>
                <label>SMD - S/M Debidos</label>
            </value>
            <value>
                <fullName>SMP</fullName>
                <label>SMP- S/M Pagados</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>