force-app/main/default/objects/Opportunity/fields/ERUM_IVA__c.field-meta.xml
<CustomField>
    <fullName>ERUM_IVA__c</fullName>
    <defaultValue>0.21</defaultValue>
    <label>%IVA</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>