force-app/main/default/objects/Opportunity/fields/ERUM_Key_Pedido__c.field-meta.xml
<CustomField>
    <fullName>ERUM_Key_Pedido__c</fullName>
    <label>ERUM_Key_Pedido</label>
    <length>66</length>
    <type>Text</type>
</CustomField>