force-app/main/default/objects/Opportunity/fields/ERUM_Numero_cuenta__c.field-meta.xml
<CustomField>
    <fullName>ERUM_Numero_cuenta__c</fullName>
    <label>Nº cuenta</label>
    <length>40</length>
    <type>Text</type>
</CustomField>