force-app/main/default/objects/Opportunity/fields/ERUM_Numero_pedido__c.field-meta.xml
<CustomField>
    <fullName>ERUM_Numero_pedido__c</fullName>
    <displayFormat>PV-{000000}</displayFormat>
    <label>Número pedido</label>
    <type>AutoNumber</type>
</CustomField>