force-app/main/default/objects/Opportunity/fields/ERUM_Numero_presupuesto__c.field-meta.xml
<CustomField>
    <fullName>ERUM_Numero_presupuesto__c</fullName>
    <displayFormat>OV-{000000}</displayFormat>
    <label>Número presupuesto</label>
    <type>AutoNumber</type>
</CustomField>