force-app/main/default/objects/Opportunity/fields/ERUM_Observaciones__c.field-meta.xml
<CustomField>
    <fullName>ERUM_Observaciones__c</fullName>
    <label>Observaciones</label>
    <type>TextArea</type>
</CustomField>