force-app/main/default/objects/Opportunity/fields/ERUM_Offer_Id_External__c.field-meta.xml
<CustomField>
    <fullName>ERUM_Offer_Id_External__c</fullName>
    <externalId>true</externalId>
    <label>Offer Id External</label>
    <length>25</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>