force-app/main/default/objects/Opportunity/fields/ERUM_Pedido_del_cliente__c.field-meta.xml
<CustomField>
    <fullName>ERUM_Pedido_del_cliente__c</fullName>
    <label>Pedido del cliente</label>
    <length>10</length>
    <type>Text</type>
</CustomField>