force-app/main/default/objects/Opportunity/fields/ERUM_RE__c.field-meta.xml
<CustomField>
    <fullName>ERUM_RE__c</fullName>
    <label>%RE</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>