force-app/main/default/objects/Opportunity/fields/ERUM_Referencia_del_cliente__c.field-meta.xml
<CustomField>
    <fullName>ERUM_Referencia_del_cliente__c</fullName>
    <label>Referencia del cliente</label>
    <length>25</length>
    <type>Text</type>
</CustomField>