force-app/main/default/objects/Opportunity/fields/ERUM_Terminos_de_pago__c.field-meta.xml
<CustomField>
    <fullName>ERUM_Terminos_de_pago__c</fullName>
    <label>Términos de pago</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ERUM_Terminos_de_pago</valueSetName>
    </valueSet>
</CustomField>