force-app/main/default/objects/Opportunity/fields/Importe_Pack__c.field-meta.xml
<CustomField>
    <fullName>Importe_Pack__c</fullName>
    <formula>ERUM_Impuesto_Pack__c * Subtotal_con_descuento__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Importe Pack</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>