force-app/main/default/objects/Opportunity/fields/Importe_RE__c.field-meta.xml
<CustomField>
    <fullName>Importe_RE__c</fullName>
    <formula>ERUM_RE__c  * Subtotal_con_descuento__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Importe RE</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>