force-app/main/default/objects/Opportunity/fields/N_productos__c.field-meta.xml
<CustomField>
    <fullName>N_productos__c</fullName>
    <label>Nº productos</label>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>