force-app/main/default/objects/Opportunity/fields/N_productos_OK__c.field-meta.xml
<CustomField>
    <fullName>N_productos_OK__c</fullName>
    <label>Nº productos OK</label>
    <summaryFilterItems>
        <field>OpportunityLineItem.Grupo_contable_correcto__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>