force-app/main/default/objects/Opportunity/fields/Pais__c.field-meta.xml
<CustomField>
    <fullName>Pais__c</fullName>
    <formula>Account.BillingCountry</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pais</label>
    <type>Text</type>
</CustomField>