force-app/main/default/objects/Opportunity/fields/Peso_neto_Kg__c.field-meta.xml
<CustomField>
    <fullName>Peso_neto_Kg__c</fullName>
    <label>Peso neto (Kg)</label>
    <summarizedField>OpportunityLineItem.Peso_neto_Kg__c</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>