force-app/main/default/objects/Opportunity/fields/productos_OK__c.field-meta.xml
<CustomField>
    <fullName>productos_OK__c</fullName>
    <formula>N_productos__c = N_productos_OK__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Productos OK</label>
    <type>Checkbox</type>
</CustomField>