force-app/main/default/objects/Opportunity/fields/searchall__c.field-meta.xml
<CustomField>
    <fullName>searchall__c</fullName>
    <defaultValue>&apos;all&apos;</defaultValue>
    <label>searchall</label>
    <length>3</length>
    <type>Text</type>
</CustomField>