force-app/main/default/objects/Opportunity/fields/Total_Bruto__c.field-meta.xml
<CustomField>
    <fullName>Total_Bruto__c</fullName>
    <label>Peso bruto (Kg)</label>
    <summarizedField>OpportunityLineItem.Subtotal__c</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>