force-app/main/default/objects/Opportunity/fields/Total_NETO__c.field-meta.xml
<CustomField>
    <fullName>Total_NETO__c</fullName>
    <formula>Total_impuestos__c +  Subtotal_con_descuento__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total NETO</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>