force-app/main/default/objects/Opportunity/fields/Volumen_m3__c.field-meta.xml
<CustomField>
    <fullName>Volumen_m3__c</fullName>
    <label>Volumen (m3)</label>
    <summarizedField>OpportunityLineItem.Volumen_m3__c</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>