force-app/main/default/objects/Opportunity/recordTypes/Pedido.recordType-meta.xml
<RecordType>
    <fullName>Pedido</fullName>
    <active>true</active>
    <businessProcess>Pedido</businessProcess>
    <label>Pedido</label>
</RecordType>