force-app/main/default/objects/Opportunity/recordTypes/Presupuesto.recordType-meta.xml
<RecordType>
    <fullName>Presupuesto</fullName>
    <active>true</active>
    <businessProcess>Presupuesto</businessProcess>
    <label>Presupuesto</label>
</RecordType>