force-app/main/default/objects/Opportunity/recordTypes/PresupuestoRetail.recordType-meta.xml
<RecordType>
    <fullName>PresupuestoRetail</fullName>
    <active>true</active>
    <businessProcess>Presupuesto</businessProcess>
    <description>Tipo de registro para almacenar oportunidades pertenecientes a la empresa de retail</description>
    <label>Presupuesto Retail</label>
</RecordType>