force-app/main/default/objects/Opportunity/recordTypes/PresupuestoSeguridadVial.recordType-meta.xml
<RecordType>
    <fullName>PresupuestoSeguridadVial</fullName>
    <active>true</active>
    <businessProcess>Presupuesto</businessProcess>
    <description>Tipo de registro para almacenar oportunidades pertenecientes a la empresa de seguridad vial</description>
    <label>Presupuesto Seguridad Vial</label>
</RecordType>