force-app/main/default/objects/Opportunity/validationRules/Cliente_activo.validationRule-meta.xml
<ValidationRule>
    <fullName>Cliente_activo</fullName>
    <active>false</active>
    <errorConditionFormula>Account.ERUM_Activo_ERP__c = TRUE</errorConditionFormula>
    <errorMessage>No se pueden crear presupuestos debido a que el cliente no está en Navision.</errorMessage>
</ValidationRule>