force-app/main/default/objects/Opportunity/validationRules/Validar_Grupo_contable.validationRule-meta.xml
<ValidationRule>
    <fullName>Validar_Grupo_contable</fullName>
    <active>true</active>
    <errorConditionFormula>AND(TEXT(StageName)=&quot;Aceptado&quot;,productos_OK__c =false)</errorConditionFormula>
    <errorDisplayField>StageName</errorDisplayField>
    <errorMessage>No se pueden crear el pedido debido a que los Grupos contables no son correctos.</errorMessage>
</ValidationRule>